# ready-agent-1

./: .gitignore  AGENTS.md  BRAND.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude-plugin/: plugin.json
.cmux/: cmux.json
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-check-accuracy.yml  3-feature-request.yml  4-criterion-proposal.yml  5-docs.yml  config.yml
.github/workflows/: ci.yml  codeql.yml  readiness.yml  release.yml
ci/: action.yml
docs/: PLAN-factory-gap-closure.md  PLAN-loop-readiness.md  PLAN-roadmap-factory-parity.md  cli.md  extending.md  getting-started.md
engine/readiness/: cli.py  detect.py  history.py  judgments.py  model.py  report.py  run.py  score.py  version.py
evals/: __init__.py  contracts.py  fixtures.py  judge.py  parity.py  runner.py  scenarios.py  thresholds.json
evals/fixtures/: build-check-command-config-pass.json  build-check-command-fail.json  build-check-command-pass.json  build-ci-duration-budget-fail.json  build-ci-duration-budget-pass.json  devenv-agent-hooks-config-pass.json  devenv-agent-hooks-fail.json  docs-ai-stance-fail.json  (+42 more)
references/: dora-crosswalk.md  pillars.md
scripts/: coverage_gate.py  vendor.py
templates/: env.example
tests/: __init__.py  _util.py  test_checks.py  test_cli.py  test_collectors.py  test_contracts.py  test_coverage_gate.py  test_detect.py  test_eval_fixtures.py  test_eval_runner.py  test_exec.py  test_fix.py  test_history.py  test_m1_extra.py  test_m2_extra.py  test_observability_checks.py  test_parsers.py  test_product_checks.py  test_report.py  test_score.py  test_skills.py  test_static.py  test_vendor.py
(+98 files in other folders)
